--- a/app/src/main/res/layout/activity_web.xml
+++ b/app/src/main/res/layout/activity_web.xml
@@ -3,19 +3,34 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/activity_web"
+    android:background="@android:color/white"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     tools:openDrawer="start"
-    tools:context="cn.edu.cust.m.custed.WebActivity">
+    tools:context="cn.custed.app.WebActivity">
 
-   <WebView
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-       android:id="@+id/main_webView"
-       android:layout_width="match_parent"
-       android:layout_height="match_parent">
+        <WebView
+            android:id="@+id/main_webView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+        </WebView>
 
-   </WebView>
+            <TextView
+                android:layout_width="wrap_content"
+                android:background="@android:color/white"
+                android:id="@+id/web_test"
+                android:visibility="invisible"
+                android:scrollbars = "vertical"
+                android:layout_height="wrap_content" />
+
+    </RelativeLayout>
+
+
 
     <android.support.design.widget.NavigationView
         android:id="@+id/nav_view"
@@ -23,7 +38,59 @@
         android:layout_height="match_parent"
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
+        app:elevation="0dp"
+        android:transformPivotX="0dp"
+        android:translationY="0dp"
+        app:itemIconTint="#737373"
         app:headerLayout="@layout/nav_header_main"
-        app:menu="@menu/activity_main_drawer" />
+        app:menu="@menu/activity_main_drawer" >
+
+        <LinearLayout
+            android:layout_height="?attr/listPreferredItemHeightSmall"
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:paddingLeft="?attr/listPreferredItemPaddingLeft"
+            android:paddingRight="?attr/listPreferredItemPaddingRight"
+            android:layout_marginTop="457dp"
+            android:layout_gravity="top"
+            >
+
+            <ImageView xmlns:android="http://schemas.android.com/apk/res/android"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:layout_gravity="center_vertical"
+                android:src="@drawable/nav_page"
+                android:tint="#737373"
+                android:scaleType="centerInside"/>
+
+            <TextView xmlns:android="http://schemas.android.com/apk/res/android"
+                android:paddingLeft="32dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="#212121"
+                android:layout_gravity="center_vertical"
+                android:text="课表启动页"
+                android:ellipsize="end"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
+                android:gravity="center"
+                android:maxLines="1"/>
+
+            <android.support.v7.widget.SwitchCompat
+                android:checked="false"
+                android:id="@+id/nav_switch"
+                android:layout_marginLeft="75dp"
+                android:layout_gravity="center_vertical"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+
+
+        </LinearLayout>
+
+
+    </android.support.design.widget.NavigationView>
+
+
+
 
 </android.support.v4.widget.DrawerLayout>
