--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="@dimen/nav_header_height"
     android:background="@drawable/side_nav_bar_head"
@@ -13,8 +12,8 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
-    <cn.edu.cust.m.custed.utils.MyCircleImageView
-        android:id="@+id/head_image_View"
+    <cn.custed.app.utils.MyCircleImageView
+        android:id="@+id/nav_usr_image"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:src="@drawable/user_icon" />
@@ -23,6 +22,7 @@
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
         android:text="custed"
+        android:id="@+id/nav_usr_name"
         android:textSize="22sp"
         android:shadowColor="@android:color/black"
         android:shadowRadius="1"
@@ -31,7 +31,7 @@
         android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/nav_usr_sign"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:shadowColor="@android:color/black"
