--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -20,7 +20,11 @@
                 android:icon="@drawable/nav_settings"
                 android:title="设置" />
 
+            <item
+                android:id="@+id/other_settings"
+                android:icon="@drawable/nav_otherset"
+                android:title="课表设置" />
+
         </menu>
     </item>
-
 </menu>
