--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,5 +2,5 @@
 <resources>
     <color name="colorPrimary">#3593f4</color>
     <color name="colorPrimaryDark">#3593f4</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorAccent">#3593f4</color>
 </resources>
