--- a/app/src/main/res/layout/activity_web.xml
+++ b/app/src/main/res/layout/activity_web.xml
@@ -3,7 +3,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/activity_web"
-    android:background="@android:color/white"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
@@ -19,14 +18,13 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
         </WebView>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:background="@android:color/white"
-                android:id="@+id/web_test"
-                android:visibility="invisible"
-                android:scrollbars = "vertical"
-                android:layout_height="wrap_content" />
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/error_page"
+            android:src="@drawable/error_page_day"
+            android:visibility="invisible"
+            />
 
     </RelativeLayout>
 
@@ -38,7 +36,7 @@
         android:layout_height="match_parent"
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
-        app:elevation="0dp"
+        android:background="@color/color_nav_head_bg"
         android:transformPivotX="0dp"
         android:translationY="0dp"
         app:itemIconTint="#737373"
@@ -48,28 +46,29 @@
         <LinearLayout
             android:layout_height="?attr/listPreferredItemHeightSmall"
             android:orientation="horizontal"
+            android:background="@color/color_nav_head_bg"
             android:layout_width="match_parent"
             android:paddingLeft="?attr/listPreferredItemPaddingLeft"
             android:paddingRight="?attr/listPreferredItemPaddingRight"
-            android:layout_marginTop="457dp"
+            android:layout_marginTop="361dp"
             android:layout_gravity="top"
             >
 
-            <ImageView xmlns:android="http://schemas.android.com/apk/res/android"
+            <ImageView
                 android:layout_width="24dp"
                 android:layout_height="24dp"
                 android:layout_gravity="center_vertical"
-                android:src="@drawable/nav_page"
+                app:srcCompat="@drawable/nav_page"
                 android:tint="#737373"
-                android:scaleType="centerInside"/>
+                android:scaleType="centerInside" />
 
-            <TextView xmlns:android="http://schemas.android.com/apk/res/android"
+            <TextView
                 android:paddingLeft="32dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="#212121"
                 android:layout_gravity="center_vertical"
-                android:text="课表启动页"
+                android:text="@string/class_first_page"
                 android:ellipsize="end"
                 android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                 android:gravity="center"
@@ -78,9 +77,10 @@
             <android.support.v7.widget.SwitchCompat
                 android:checked="false"
                 android:id="@+id/nav_switch"
-                android:layout_marginLeft="75dp"
+                android:layout_marginLeft="40dp"
                 android:layout_gravity="center_vertical"
-                android:layout_width="wrap_content"
+                android:padding="5dp"
+                android:layout_width="50dp"
                 android:layout_height="wrap_content" />
 
 
