--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -2,28 +2,27 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="@dimen/nav_header_height"
-    android:background="@drawable/side_nav_bar_head"
     android:gravity="bottom"
     android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:id="@+id/nav_header_main"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:theme="@style/ThemeOverlay.AppCompat.Dark">
+    android:paddingTop="@dimen/activity_vertical_margin">
 
     <cn.custed.app.utils.MyCircleImageView
         android:id="@+id/nav_usr_image"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
         android:src="@drawable/user_icon" />
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="@dimen/nav_header_vertical_spacing"
-        android:text="custed"
+        android:paddingTop="8dp"
+        android:text="@string/custed_widget"
         android:id="@+id/nav_usr_name"
-        android:textSize="22sp"
+        android:textSize="18sp"
+        android:textColor="@android:color/white"
         android:shadowColor="@android:color/black"
         android:shadowRadius="1"
         android:shadowDx="0"
@@ -34,11 +33,12 @@
         android:id="@+id/nav_usr_sign"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:shadowColor="@android:color/black"
+        android:shadowColor="#ffffff"
         android:shadowRadius="1"
+        android:textSize="12sp"
         android:shadowDx="0"
-        android:textColor="#d7d7d7"
+        android:textColor="#c9000000"
         android:shadowDy="0"
-        android:text="你的大学生活助理" />
+        android:text="@string/nav_sing" />
 
 </LinearLayout>
